[workspace]
resolver = "3"

members = [
    "fake-tcp",
    "phantun",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
log = "0"

[profile.release]
panic = "abort"
opt-level = "z"
strip = true

[unstable]
build-std = ["std", "panic_abort", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]

